src/test/ui/consts/const-mut-refs/issue-76510.64bit.stderr
error[E0764]: mutable references are not allowed in the final value of constants
  --> $DIR/issue-76510.rs:5:29
   |
LL | const S: &'static mut str = &mut " hello ";
   |                             ^^^^^^^^^^^^^^

error[E0658]: mutation through a reference is not allowed in constants
  --> $DIR/issue-76510.rs:5:29
   |
LL | const S: &'static mut str = &mut " hello ";
   |                             ^^^^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/issue-76510.rs:5:29
   |
LL | const S: &'static mut str = &mut " hello ";
   |                             ^^^^^^^^^^^^^^ cannot borrow as mutable

error[E0080]: it is undefined behavior to use this value
  --> $DIR/issue-76510.rs:5:1
   |
LL | const S: &'static mut str = &mut " hello ";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered mutable reference in a `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: 16, align: 8) {
               ╾───────alloc2────────╼ 07 00 00 00 00 00 00 00 │ ╾──────╼........
           }

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0080, E0596, E0658, E0764.
For more information about an error, try `rustc --explain E0080`.
